@@ -41,7 +41,8 @@
 				#define USB_DEVICE_ONLY
 			#endif
 			
-			#if (defined(__AVR_AT90USB162__)  || defined(__AVR_AT90USB82__))
+			#if (defined(__AVR_AT90USB162__) || defined(__AVR_AT90USB82__) || \
+			     defined(__AVR_ATmega32U2__) || defined(__AVR_ATmega16U2__) || defined(__AVR_ATmega8U2__))
 				#define USB_SERIES_2_AVR
 			#elif (defined(__AVR_ATmega16U4__) || defined(__AVR_ATmega32U4__))
 				#define USB_SERIES_4_AVR
@@ -57,15 +58,19 @@
 				#define USB_CAN_BE_DEVICE
 			#elif defined(USB_HOST_ONLY)
 				#define USB_CAN_BE_HOST
+
 				#define USB_CurrentMode USB_MODE_HOST
 			#elif defined(USB_DEVICE_ONLY)
 				#define USB_CAN_BE_DEVICE
+
 				#define USB_CurrentMode USB_MODE_DEVICE
 			#endif
 			
-			#if (!(defined(__AVR_AT90USB1287__) || defined(__AVR_AT90USB647__)) && defined(USB_HOST_ONLY))
+			#if (!defined(USB_SERIES_7_AVR) && defined(USB_HOST_ONLY))
 				#error USB_HOST_ONLY is not available for the currently selected USB AVR model.
-			#elif (defined(USB_HOST_ONLY) && defined(USB_DEVICE_ONLY))
+			#endif
+			
+			#if (defined(USB_HOST_ONLY) && defined(USB_DEVICE_ONLY))
 				#error USB_HOST_ONLY and USB_DEVICE_ONLY are mutually exclusive.
 			#endif
 
